--- a/index.html
+++ b/index.html
@@ -646,12 +646,12 @@
               </div>
             </div>
           `;
-          document.getElementById("yes-button-container").style.display = "block";
-          btn.style.display = "inline-block";
-          btn.disabled = false;
-          btn.style.opacity = "1";
-          // First update: 3000ms → 2000ms
-          pauseAwareTimeout(nextImage, 2000);
+          document.getElementById("yes-button-container").style.display = "block";  
+          btn.style.display = "inline-block";  
+          btn.disabled = false;  
+          btn.style.opacity = "1";  
+          // First update: 3000ms → 2000ms  
+          pauseAwareTimeout(nextImage, 2000);  
         }
 
         /* -------------- MODIFIED CLICK HANDLER -------------- */
@@ -745,7 +745,7 @@
   </script>
 
   <script>
-    /*************** 6) Multi-Key Actual Experiment Trial ***************/
+    /*************** 6) Multi-Key Actual Experiment Trial with BATCHED PREFETCH ***************/
     var multiKeyExperimentTrial = {
       type: jsPsychHtmlButtonResponse,
       stimulus: '<div id="actual-exp-container"></div>',
@@ -805,7 +805,7 @@
         }
         runExperimentForProperty(0);
 
-        /* -------- DIRECTIONAL EXPERIMENT FUNCTION -------- */
+        /* -------- DIRECTIONAL EXPERIMENT FUNCTION (BATCHED LOADING) -------- */
         function runDirectionalExperiment(searchKey, propertyName, callback) {
           var container = document.getElementById("actual-exp-container");
           container.innerHTML = `
@@ -834,194 +834,195 @@
               container.innerHTML = "<p>Expected ≥ 401 images for key: " + searchKey + ", but got " + fileNames.length + ".</p>";
               callback({}, fileNames); return;
             }
+            // Only take first 401
             fileNames = fileNames.slice(0, 401);
 
+            // Split into original + 4 directions
             var originalFilename   = fileNames[0];
-            var leftFilenamesAll   = fileNames.slice(1, 101);  // shifts 1-100 L…
+            var leftFilenamesAll   = fileNames.slice(1, 101);
             var rightFilenamesAll  = fileNames.slice(101, 201);
             var upFilenamesAll     = fileNames.slice(201, 301);
             var downFilenamesAll   = fileNames.slice(301, 401);
 
-            /* -------------- NO SKIPPING — 1-px steps -------------- */
-            const leftFilenames  = leftFilenamesAll;
-            const rightFilenames = rightFilenamesAll;
-            const upFilenames    = upFilenamesAll;
-            const downFilenames  = downFilenamesAll;
+            // Prepare per-phase filename arrays (including original at index 0)
+            const phases = [
+              { direction: "L", label: "LEFT",  filenames: [originalFilename].concat(leftFilenamesAll) },
+              { direction: "R", label: "RIGHT", filenames: [originalFilename].concat(rightFilenamesAll) },
+              { direction: "U", label: "UP",    filenames: [originalFilename].concat(upFilenamesAll) },
+              { direction: "D", label: "DOWN",  filenames: [originalFilename].concat(downFilenamesAll) }
+            ];
 
-            /* ------------------------------------------------------ */
+            const baseImageURL = "https://lasvientuexperimentdata.s3.ap-southeast-1.amazonaws.com/Rendered+Images/";
+            const INITIAL_CACHE_SIZE  = 10;  // preload first 10 shifts + original
+            const PREFETCH_THRESHOLD  = 5;   // when within 5 of cache end, fetch more
+            const PREFETCH_SIZE       = 5;   // fetch 5 more each time
 
-            var allFilenames = [originalFilename]
-              .concat(leftFilenames, rightFilenames, upFilenames, downFilenames);
+            var currentPhaseIndex = 0;
+            var currentImageIndex = 0;
+            var phaseResults      = {};
+            var highestLoadedIndex = 0;  // track how many we've preloaded
 
-            var baseImageURL = "https://lasvientuexperimentdata.s3.ap-southeast-1.amazonaws.com/Rendered+Images/";
-            function loadImage(src) {
-              return new Promise(function(resolve, reject) {
+            // Utility to preload a set of indices for the current phase
+            function preloadImages(indices) {
+              var fnames = phases[currentPhaseIndex].filenames;
+              indices.forEach(function(i) {
                 var img = new Image();
-                img.onload = function() { resolve(img); };
-                img.onerror = function() { reject(src); };
-                img.src = baseImageURL + encodeURIComponent(src);
+                img.src = baseImageURL + encodeURIComponent(fnames[i]);
               });
             }
 
-            Promise.all(allFilenames.map(loadImage)).then(function(loadedImages) {
-              var imageMap = {};
-              for (var i = 0; i < allFilenames.length; i++) {
-                imageMap[allFilenames[i]] = loadedImages[i];
+            btn.style.display = "none";
+            btn.disabled = true;
+            btn.style.opacity = "0.5";
+
+            // Handle YES clicks
+            var yesHandler = function () {
+              if (!btn.disabled) {
+                var phase = phases[currentPhaseIndex];
+                var filenameURL = document.getElementById("exp-shift-image").src;
+                var parsed = parseShiftFromFilename(filenameURL);
+                yesClickEvents.push({
+                  phase: "actual",
+                  group: window.selectedGroupKey,
+                  property: propertyName,
+                  direction: parsed.direction,
+                  shift: parsed.shift,
+                  filename: filenameURL
+                });
+                phaseResults[phase.label] = {
+                  imageIndex: currentImageIndex,
+                  filename: filenameURL,
+                  pixelShift: parsed.shift,
+                  direction: parsed.direction
+                };
+                window.completedSets++;
+                window.updateProgressCircle();
+                moveToNextPhase();
               }
+            };
+            btn.addEventListener("click", yesHandler);
 
-              var originalImage = imageMap[originalFilename];
-              var leftImages  = leftFilenames .map(fn => imageMap[fn]);
-              var rightImages = rightFilenames.map(fn => imageMap[fn]);
-              var upImages    = upFilenames   .map(fn => imageMap[fn]);
-              var downImages  = downFilenames .map(fn => imageMap[fn]);
-
-              /* ---- Pre-pend reference frame to each phase ---- */
-              const leftPhaseImages  = [originalImage, ...leftImages];
-              const rightPhaseImages = [originalImage, ...rightImages];
-              const upPhaseImages    = [originalImage, ...upImages];
-              const downPhaseImages  = [originalImage, ...downImages];
-
-              const phases = [
-                { direction: "L", label: "LEFT",  images: leftPhaseImages  },
-                { direction: "R", label: "RIGHT", images: rightPhaseImages },
-                { direction: "U", label: "UP",    images: upPhaseImages    },
-                { direction: "D", label: "DOWN",  images: downPhaseImages  }
-              ];
-
-              var currentPhaseIndex = 0;
-              var currentImageIndex = 0;
-              var phaseResults = {};
-
+            // Countdown before each phase
+            function startPhaseCountdown() {
               btn.style.display = "none";
+              var phase = phases[currentPhaseIndex];
+              container.innerHTML = `
+                <div id="exp-header" style="text-align:center; margin-top:10px;">
+                  <h3 style="margin:0 0 10px 0;">
+                    Saliency object will be moving <span style="font-size:1.5em; text-decoration:underline;">${phase.label}</span>
+                  </h3>
+                  <h3 id="exp-countdown" style="font-size:72px; font-weight:bold; margin:100px;">3</h3>
+                </div>
+              `;
+              var count = 3;
+              function tick() {
+                if (demoPaused) { return setTimeout(tick, 100); }
+                count--;
+                document.getElementById("exp-countdown").innerHTML = count;
+                if (count <= 0) {
+                  startPhase();
+                } else {
+                  setTimeout(tick, 1000);
+                }
+              }
+              setTimeout(tick, 1000);
+            }
+
+            // Start showing a phase (with initial preload)
+            function startPhase() {
+              currentImageIndex = 0;
+              var phase = phases[currentPhaseIndex];
+              // preload original + initial chunk
+              highestLoadedIndex = Math.min(INITIAL_CACHE_SIZE, phase.filenames.length - 1);
+              var toPreload = [];
+              for (var i = 0; i <= highestLoadedIndex; i++) toPreload.push(i);
+              preloadImages(toPreload);
+
+              document.getElementById("yes-button-container").style.display = "block";
+              btn.style.display = "inline-block";
+              btn.disabled = false;
+              btn.style.opacity = "1";
+              showPhaseImages();
+            }
+
+            // Render current image, then schedule next
+            function showPhaseImages() {
+              var phase = phases[currentPhaseIndex];
+              var fn = phase.filenames[currentImageIndex];
+              container.innerHTML = `
+                <div id="exp-header" style="text-align:center; margin-top:10px;">
+                  <h3 style="margin:0 0 10px 0;">
+                    Saliency object will be moving <span style="font-size:1.5em; text-decoration:underline;">${phase.label}</span>
+                  </h3>
+                </div>
+                <div id="exp-content" style="display:flex; justify-content:center; align-items:center;">
+                  <div style="margin:5px; text-align:center;">
+                    <img id="exp-ref-image"
+                         src="${baseImageURL + encodeURIComponent(phase.filenames[0])}"
+                         class="demo-image">
+                    <br><span>Reference Image</span>
+                  </div>
+                  <div style="margin:5px; text-align:center;">
+                    <img id="exp-shift-image"
+                         src="${baseImageURL + encodeURIComponent(fn)}"
+                         class="demo-image"
+                         style="visibility:visible;">
+                    <br><span>Shifted Image</span>
+                  </div>
+                </div>
+              `;
+              btn.disabled = false;
+              btn.style.opacity = "1";
+              pauseAwareTimeout(advancePhaseImage, 2000);
+            }
+
+            // Advance within phase, prefetching more as needed
+            function advancePhaseImage() {
               btn.disabled = true;
               btn.style.opacity = "0.5";
+              var phase = phases[currentPhaseIndex];
 
-              var yesHandler = function () {
-                if (!btn.disabled) {
-                  var phase = phases[currentPhaseIndex];
-                  var currentImg = phase.images[currentImageIndex];
-                  if (currentImg) {
-                    var currentFilename = currentImg.src;
-                    var parsed = parseShiftFromFilename(currentFilename);
-                    yesClickEvents.push({
-                      phase: "actual",
-                      group: window.selectedGroupKey,
-                      property: propertyName,
-                      direction: parsed.direction,
-                      shift: parsed.shift,
-                      filename: currentFilename
-                    });
-                    phaseResults[phase.label] = {
-                      imageIndex: currentImageIndex,
-                      filename: currentFilename,
-                      pixelShift: parsed.shift,
-                      direction: parsed.direction
-                    };
-                  }
-                  window.completedSets++;
-                  window.updateProgressCircle();
-                  moveToNextPhase();
+              if (currentImageIndex < phase.filenames.length - 1) {
+                currentImageIndex++;
+
+                // If we're within PREFETCH_THRESHOLD of what we've loaded, fetch another PREFETCH_SIZE
+                if (currentImageIndex + PREFETCH_THRESHOLD > highestLoadedIndex &&
+                    highestLoadedIndex < phase.filenames.length - 1) {
+                  var start = highestLoadedIndex + 1;
+                  var end   = Math.min(highestLoadedIndex + PREFETCH_SIZE, phase.filenames.length - 1);
+                  var more  = [];
+                  for (var j = start; j <= end; j++) more.push(j);
+                  preloadImages(more);
+                  highestLoadedIndex = end;
                 }
-              };
-              btn.addEventListener("click", yesHandler);
 
-              function startPhaseCountdown() {
-                btn.style.display = "none";
-                var phase = phases[currentPhaseIndex];
-                container.innerHTML = `
-                  <div id="exp-header" style="text-align:center; margin-top:10px;">
-                    <h3 style="margin:0 0 10px 0;">
-                      Saliency object will be moving <span style="font-size:1.5em; text-decoration:underline;">${phase.label}</span>
-                    </h3>
-                    <h3 id="exp-countdown" style="font-size:72px; font-weight:bold; margin:100px;">3</h3>
-                  </div>
-                `;
-                var count = 3;
-                function expCountdownTick() {
-                  if (demoPaused) { setTimeout(expCountdownTick, 100); return; }
-                  count--;
-                  document.getElementById("exp-countdown").innerHTML = count;
-                  if (count <= 0) { startPhase(); }
-                  else { setTimeout(expCountdownTick, 1000); }
-                }
-                setTimeout(expCountdownTick, 1000);
-              }
-
-              function startPhase() {
-                currentImageIndex = 0;
-                document.getElementById("yes-button-container").style.display = "block";
-                btn.style.display = "inline-block";
-                btn.disabled = false;
-                btn.style.opacity = "1";
-                showPhaseImages();
-              }
-
-              function showPhaseImages() {
-                var phase = phases[currentPhaseIndex];
-                container.innerHTML = `
-                  <div id="exp-header" style="text-align:center; margin-top:10px;">
-                    <h3 style="margin:0 0 10px 0;">
-                      Saliency object will be moving <span style="font-size:1.5em; text-decoration:underline;">${phase.label}</span>
-                    </h3>
-                  </div>
-                  <div id="exp-content" style="display:flex; justify-content:center; align-items:center;">
-                    <div style="margin:5px; text-align:center;">
-                      <img id="exp-ref-image" src="${originalImage.src}" class="demo-image">
-                      <br><span>Reference Image</span>
-                    </div>
-                    <div style="margin:5px; text-align:center;">
-                      <img id="exp-shift-image" src="${phase.images[currentImageIndex].src}" class="demo-image" style="visibility:visible;">
-                      <br><span>Shifted Image</span>
-                    </div>
-                  </div>
-                `;
+                var fn = phase.filenames[currentImageIndex];
+                var shiftImg = document.getElementById("exp-shift-image");
+                shiftImg.src = baseImageURL + encodeURIComponent(fn);
+                shiftImg.style.visibility = "visible";
                 btn.disabled = false;
                 btn.style.opacity = "1";
                 pauseAwareTimeout(advancePhaseImage, 2000);
+              } else {
+                moveToNextPhase();
               }
+            }
 
-              function advancePhaseImage() {
-                btn.disabled = true;
-                btn.style.opacity = "0.5";
-                var shiftImg = document.getElementById("exp-shift-image");
-                shiftImg.style.visibility = "hidden";
-                pauseAwareTimeout(function () {
-                  var phase = phases[currentPhaseIndex];
-                  if (currentImageIndex < phase.images.length - 1) {
-                    currentImageIndex++;
-                    shiftImg.src = phase.images[currentImageIndex].src;
-                    shiftImg.style.visibility = "visible";
-                    btn.disabled = false;
-                    btn.style.opacity = "1";
-                    pauseAwareTimeout(advancePhaseImage, 2000);
-                  } else {
-                    moveToNextPhase();
-                  }
-                }, 500);
+            function moveToNextPhase() {
+              btn.disabled = true;
+              btn.style.opacity = "0.5";
+              currentPhaseIndex++;
+              if (currentPhaseIndex < phases.length) {
+                startPhaseCountdown();
+              } else {
+                btn.removeEventListener("click", yesHandler);
+                callback(phaseResults, phases.map(p => p.filenames));
               }
+            }
 
-              function moveToNextPhase() {
-                btn.disabled = true;
-                btn.style.opacity = "0.5";
-                currentPhaseIndex++;
-                if (currentPhaseIndex < phases.length) {
-                  startPhaseCountdown();
-                } else {
-                  btn.removeEventListener("click", yesHandler);
-                  callback(phaseResults, {
-                    original: originalFilename,
-                    left: leftFilenames,
-                    right: rightFilenames,
-                    up: upFilenames,
-                    down: downFilenames
-                  });
-                }
-              }
-              // Start countdown for the first phase
-              startPhaseCountdown();
-            }).catch(function (err) {
-              container.innerHTML = "<p>Error loading images: " + err + "</p>";
-            });
+            // Kick off the very first phase
+            startPhaseCountdown();
+
           }).catch(function (error) {
             container.innerHTML = "<p>Error fetching image filenames: " + error + "</p>";
           });
