--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 
   <script>
     var objectNames = [
-      //"Book Shelves", "Chess", "Wheel", "Food Platter", "Fruits", "Humming Bird", "Plant", "Swing", 
-      "Vase", //"Wood"
+      //"Book Shelves", "Chess", "Wheel", "Food Platter", "Fruits", "Humming Bird", "Plant", "Swing", "Vase", 
+      "Wood"
     ];
     var groups = {
       "Group1": ["Center_100%_Plain", "Center_100%_LowContrast"],
