--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
       choices: ['Continue'],
       on_load: function () {
         const btn = document.querySelector('.jspsych-btn');
-        btn.disabled = true;
+        btn.disabled = false;
 
         const video = document.getElementById('demo-video');
         let playStart = null;
@@ -1647,3 +1647,4 @@
 </body>
 
 </html>
+
